bacs/system/single: testing stub + main() implementation.

--- a/bacs/system/single/src/CMakeLists.txt
+++ b/bacs/system/single/src/CMakeLists.txt
@@ -50,6 +50,7 @@ add_executable(${PROJECT_NAME}
     ${sources}
     src/bin/main.cpp
 
+    src/lib/testing.cpp
     src/lib/callback.cpp
 
     src/lib/callbacks/xmlrpc.cpp
