bacs/system/single: process -> detail::process.

--- a/bacs/system/single/src/CMakeLists.txt
+++ b/bacs/system/single/src/CMakeLists.txt
@@ -52,11 +52,11 @@ add_executable(${PROJECT_NAME}
     src/bin/main.cpp
 
     src/lib/tests.cpp
-    src/lib/process.cpp
     src/lib/testing.cpp
     src/lib/testing_test.cpp
     src/lib/callback.cpp
 
+    src/lib/detail/process.cpp
     src/lib/detail/file.cpp
 
     src/lib/callbacks/xmlrpc.cpp
