bacs::single::builders::interpretable implementation.

--- a/bacs/system/single/src/CMakeLists.txt
+++ b/bacs/system/single/src/CMakeLists.txt
@@ -67,6 +67,7 @@ add_executable(${PROJECT_NAME}
     src/lib/builders/native_compilable.cpp
     src/lib/builders/gcc.cpp
     src/lib/builders/fpc.cpp
+    src/lib/builders/interpretable.cpp
 )
 target_link_libraries(${PROJECT_NAME} ${libraries})
 
