--- a/bacs/system/single/src/CMakeLists.txt
+++ b/bacs/system/single/src/CMakeLists.txt
@@ -68,6 +68,7 @@ add_executable(${PROJECT_NAME}
     src/lib/builders/gcc.cpp
     src/lib/builders/fpc.cpp
     src/lib/builders/interpretable.cpp
+    src/lib/builders/python.cpp
 )
 target_link_libraries(${PROJECT_NAME} ${libraries})
 
