--- a/bacs/system/single/src/CMakeLists.txt
+++ b/bacs/system/single/src/CMakeLists.txt
@@ -6,34 +6,17 @@ cmake_minimum_required(VERSION 2.8)
 
 include(YandexContestCommon)
 
-# BOOST
-set(Boost_USE_STATIC_LIBS OFF)
-set(Boost_USE_MULTITHREADED ON)
-find_package(Boost COMPONENTS system filesystem serialization iostreams unit_test_framework program_options regex thread REQUIRED)
-list(APPEND includes ${Boost_INCLUDE_DIRS})
-list(APPEND libraries ${Boost_LIBRARIES})
-
-# XML-RPC
-find_package(XMLRPC REQUIRED c++2 libwww-client abyss-server)
-list(APPEND includes ${XMLRPC_INCLUDE_DIRS})
-list(APPEND libraries ${XMLRPC_LIBRARIES})
-
-# Local
-include_directories(include ${includes})
+bunsan_use_boost(system filesystem serialization iostreams unit_test_framework program_options regex thread)
+bunsan_use_xmlrpc(c++2 libwww-client abyss-server)
 
 # ProtoBuf
 find_package(Protobuf REQUIRED)
-list(APPEND includes ${PROTOBUF_INCLUDE_DIRS})
-list(APPEND libraries ${PROTOBUF_LIBRARIES})
+bunsan_use(${PROTOBUF_LIBRARIES})
+include_directories(${PROTOBUF_INCLUDE_DIRS})
 
-# bunsan
-list(APPEND libraries bunsan_common bunsan_pm)
+bunsan_use_bunsan(common pm bacs_single_api)
 
-# bacs::single::api
-list(APPEND libraries bunsan_bacs_single_api)
-
-# yandex_contest_(
-list(APPEND libraries
+bunsan_use(
     yandex_contest_common
     yandex_contest_system
     yandex_contest_invoker
@@ -47,7 +30,7 @@ endforeach()
 
 # Targets
 message(AUTHOR_WARNING "Building ${PROJECT_NAME} using ${sources} linking with ${libraries}")
-add_executable(${PROJECT_NAME}
+bunsan_add_executable(${PROJECT_NAME}
     ${sources}
     src/bin/main.cpp
 
@@ -71,13 +54,8 @@ add_executable(${PROJECT_NAME}
     src/lib/builders/python.cpp
     src/lib/builders/java.cpp
 )
-target_link_libraries(${PROJECT_NAME} ${libraries})
 
-# Installation
-install(DIRECTORY include DESTINATION .)
-install(TARGETS ${PROJECT_NAME}
-    RUNTIME DESTINATION bin
-    LIBRARY DESTINATION lib
-    ARCHIVE DESTINATION lib)
+bunsan_install_headers()
+bunsan_install_targets(${PROJECT_NAME})
 
-#yandex_contest_tests()
+#bunsan_include_tests()
