bacs/system/statement/pdflatex update.

--- a/bacs/system/statement/pdflatex/src/CMakeLists.txt
+++ b/bacs/system/statement/pdflatex/src/CMakeLists.txt
@@ -7,13 +7,13 @@ find_package(LATEX)
 include(source.cmake)
 
 add_custom_command(
-    OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/src/${target}
-    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/${source}
+    OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/src/${root}/${target}
+    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/${root}/${source}
     COMMAND ${PDFLATEX_COMPILER} ${source}
     COMMAND ${PDFLATEX_COMPILER} ${source}
-    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src/${root}
 )
 
-add_custom_target(target ALL DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/${target})
+add_custom_target(target ALL DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/${root}/${target})
 
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/${target} DESTINATION data)
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/${root}/${target} DESTINATION data)
