bacs/system/single/src/CMakeLists.txt: integration with bunsan_use_protobuf() macro.

--- a/bacs/system/single/src/CMakeLists.txt
+++ b/bacs/system/single/src/CMakeLists.txt
@@ -8,14 +8,8 @@ include(YandexContestCommon)
 
 bunsan_use_boost(system filesystem serialization iostreams unit_test_framework program_options regex thread)
 bunsan_use_xmlrpc(c++2 libwww-client abyss-server)
-
-# ProtoBuf
-find_package(Protobuf REQUIRED)
-bunsan_use(${PROTOBUF_LIBRARIES})
-include_directories(${PROTOBUF_INCLUDE_DIRS})
-
+bunsan_use_protobuf()
 bunsan_use_bunsan(common pm bacs_single_api)
-
 bunsan_use(
     yandex_contest_common
     yandex_contest_system
