--- a/bacs/system/single/src/CMakeLists.txt
+++ b/bacs/system/single/src/CMakeLists.txt
@@ -4,7 +4,7 @@ include(${CMAKE_SOURCE_DIR}/system-config.cmake OPTIONAL)
 
 cmake_minimum_required(VERSION 2.8)
 
-include(YandexContestCommon)
+include(BunsanCommon)
 
 bunsan_use_boost(system filesystem serialization iostreams program_options regex thread)
 bunsan_use_xmlrpc(c++2 libwww-client abyss-server)
