Migration to CMake packages.

--- a/bacs/system/single/list_tests/src/CMakeLists.txt
+++ b/bacs/system/single/list_tests/src/CMakeLists.txt
@@ -2,16 +2,14 @@ project(bunsan_bacs_system_single_list_tests_builder)
 
 include(${CMAKE_SOURCE_DIR}/system-config.cmake OPTIONAL)
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.0)
 
-include(BunsanCommon)
-
-bunsan_use_boost(system filesystem serialization)
-bunsan_use_bunsan(common)
+find_package(BunsanCMake CONFIG REQUIRED)
 
 bunsan_add_executable(${PROJECT_NAME}
     src/main.cpp
 )
+bunsan_use_bunsan_package(${PROJECT_NAME} bunsan_common bunsan_common)
 
 bunsan_install_targets(${PROJECT_NAME})
 install(FILES TestsCMakeLists.txt DESTINATION . RENAME CMakeLists.txt)
