--- a/bacs/system/single/src/CMakeLists.txt
+++ b/bacs/system/single/src/CMakeLists.txt
@@ -2,24 +2,9 @@ project(bacs_system_single)
 
 include(${CMAKE_SOURCE_DIR}/system-config.cmake OPTIONAL)
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.0)
 
-include(BunsanCommon)
-
-bunsan_use_boost(system filesystem regex serialization)
-bunsan_use_protobuf()
-bunsan_use_bunsan(
-    common
-    bacs_common
-    bacs_system
-    bacs_problem
-    bacs_problem_single
-)
-bunsan_use(
-    yandex_contest_common
-    yandex_contest_system
-    yandex_contest_invoker
-)
+find_package(BunsanCMake CONFIG REQUIRED)
 
 file(GLOB_RECURSE modules ${CMAKE_SOURCE_DIR}/modules/*.cmake)
 foreach(module ${modules})
@@ -28,18 +13,32 @@ foreach(module ${modules})
 endforeach()
 
 # Targets
-message(AUTHOR_WARNING "Building ${PROJECT_NAME} using ${sources} linking with ${libraries}")
+message(AUTHOR_WARNING "Building ${PROJECT_NAME}")
+message(AUTHOR_WARNING "Additional sources: ${bacs_sources}")
+message(AUTHOR_WARNING "Additional includes: ${bacs_include_dirs}")
+message(AUTHOR_WARNING "Additional libraries: ${bacs_libraries}")
 bunsan_add_executable(${PROJECT_NAME}
-    ${sources}
+    ${bacs_sources}
+
     src/bin/main.cpp
 
-    src/lib/tests.cpp
-    src/lib/testing.cpp
-
     src/lib/detail/file.cpp
+    src/lib/testing.cpp
+    src/lib/tests.cpp
 )
+bunsan_use_bunsan_package(${PROJECT_NAME} bunsan_bacs_system
+    bunsan_bacs_system
+)
+bunsan_use_bunsan_package(${PROJECT_NAME} bunsan_bacs_problem_single
+    bunsan_bacs_problem_single
+)
+bunsan_use_bunsan_package(${PROJECT_NAME} yandex_contest_invoker yandex_contest_invoker)
+bunsan_use_boost(${PROJECT_NAME} regex)
+target_include_directories(${PROJECT_NAME} PRIVATE ${bacs_include_dirs})
+target_link_libraries(${PROJECT_NAME} PRIVATE ${bacs_libraries})
 
 bunsan_install_headers()
 bunsan_install_targets(${PROJECT_NAME})
+#bunsan_install_project()
 
 #bunsan_include_tests()
