--- a/bacs/system/single/checker/return/none/src/CMakeLists.txt
+++ b/bacs/system/single/checker/return/none/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
 
-project(bacs_single_system_checker_result_mapper)
+project(bacs_system_single_checker_result_mapper)
 
 if(BunsanCMakeBuiltin)
     BunsanCMakeLoad()
@@ -12,8 +12,8 @@ bunsan_add_module_library(${PROJECT_NAME}
     src/none.cpp
 )
 # FIXME no linkage requirement
-bunsan_use_bunsan_package(${PROJECT_NAME} bunsan_bacs_system_single
-    bunsan_bacs_system_single
+bunsan_use_bunsan_package(${PROJECT_NAME} bacs_system_single
+    bacs_system_single
 )
 
 bunsan_install_targets(${PROJECT_NAME})
