--- a/bacs/system/system_verifier/src/CMakeLists.txt
+++ b/bacs/system/system_verifier/src/CMakeLists.txt
@@ -15,8 +15,8 @@ bunsan_add_module_library(${PROJECT_NAME}
 bunsan_use_bunsan_package(${PROJECT_NAME} bunsan_protobuf
     bunsan_protobuf
 )
-bunsan_use_bunsan_package(${PROJECT_NAME} bunsan_bacs_system
-    bunsan_bacs_system
+bunsan_use_bunsan_package(${PROJECT_NAME} bacs_system
+    bacs_system
 )
 
 bunsan_install_targets(${PROJECT_NAME})
