--- a/bacs/system/utility/single/c_cpp/src/CMakeLists.txt
+++ b/bacs/system/utility/single/c_cpp/src/CMakeLists.txt
@@ -1,6 +1,6 @@
-project(bunsan_bacs_utility_single_cpp)
-
 cmake_minimum_required(VERSION 3.0)
+
+project(bacs_utility_single_cpp)
 
 file(GLOB_RECURSE modules ${CMAKE_SOURCE_DIR}/modules/*.cmake)
 foreach(module ${modules})
