Renamed bacs_system_single -> bacs_system_single_worker.

--- a/bacs/system/single/src/CMakeLists.txt
+++ b/bacs/system/single/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
 
-project(bacs_system_single)
+project(bacs_system_single_worker)
 
 if(BunsanCMakeBuiltin)
     BunsanCMakeLoad()
