--- a/bacs/system/utility/single/c_cpp/src/CMakeLists.txt
+++ b/bacs/system/utility/single/c_cpp/src/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.0)
 
 project(bacs_utility_single_cpp)
 
+find_package(BacsCommon CONFIG REQUIRED)
+bacs_worker_project()
+
 file(GLOB_RECURSE modules ${CMAKE_SOURCE_DIR}/modules/*.cmake)
 foreach(module ${modules})
     message(AUTHOR_WARNING "Using ${module} module")
